2022-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Implement new `.nn` register to report the remaining
	count of lines to have their numbering suppressed.

	* src/roff/troff/env.h (class environment): Declare new member
	function `get_no_number_count()`.
	* src/roff/troff/env.cpp (get_no_number_count): Define new
	member function, returning value of member variable
	`no_number_count`.
	(init_env_requests): Define new ".nn" register and attach it to
	`get_no_number_count()`.

	* doc/groff.texi (Miscellaneous): Document it.  Include example
	of use to determine whether current output line will be
	numbered.  Also clarify meaning of register; `.nn` is not
	decremented except when output line numbering is enabled.
	* man/groff.7.man (Read-only registers): Document it.

	* src/roff/groff/tests/dot-nn_register_works.sh: Test it.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

	* NEWS: Add item.

	See <https://lists.gnu.org/archive/html/groff/2022-11/\
	msg00153.html>.

2022-11-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/fallbacks.tmac: Comment out four of the fallback
	character definitions for (preconv'd) Unicode character input
	added to address Savannah #58930 (corresponding to \[dg], \[dd],
	\[%0], and \[rn]; they are failing for not yet understood
	reasons involving "macros" attached to groff character info
	structs, and the semantics of what it means for a character to
	"exist" per the 'c' conditional operator.  Fixes regression when
	using "tty-char.tmac" (which nroff loads by default).  Problem
	introduced by me in commit 132182bd71, 23 October.  The hope is
	to resolve this issue post-groff 1.23.0.  Thanks to Dave Kemper
	for the report and discussion in Savannah #63332.

2022-11-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an-ext.tmac (SY, YS, mV): Remove `mA`, `mI`, and `mT`
	registers when done with them.

2022-11-25  G. Branden Robinson <g.branden.robinson@gmail.com>
